# Switchboard-AI-Gateway

./: .env.example  .env.production  .gitignore  Caddyfile  README.md  deploy.sh  docker-compose.yml
Plan/: Startup.md  local-development.md
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  pyrightconfig.json
backend/agent/: README.md  install.sh  pyproject.toml
backend/agent/switchboard_agent/: __main__.py  cli.py  connection.py  fingerprint.py  permissions.py  sandbox.py  service.py  tools.py
backend/app/: cache.py  config.py  context.py  db.py  main.py  middleware.py  ratelimit.py
backend/app/models/: __init__.py
backend/app/routes/: agent_poll.py  agents.py  auth.py  chat.py  conversations.py  keys.py  proxy.py  research.py  settings.py  skills.py  usage.py  web_search.py  ws_agent.py  ws_chat.py  ws_transcribe.py
backend/app/services/: agent_tools.py  embeddings.py  providers.py  rag.py  research.py  search.py  web_fetch.py
config/searxng/: settings.yml
docker/postgres/: init.sql
docs/: AGENT.md  API.md  DEPLOYMENT.md
frontend/: Dockerfile
frontend/public/: pcm-processor.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: layout.tsx  page.tsx
frontend/src/app/chat/[id]/: page.tsx
frontend/src/app/chat/agents/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: theme-toggle.tsx  toast.tsx
frontend/src/lib/: api.ts
litellm/: Dockerfile  config.yaml
(+8 files in other folders)
