[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.0.0",
    "email-validator>=2.0.0",
    "fastapi>=0.139.0",
    "gunicorn>=26.0.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.51.0",
    "websockets>=16.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
