[project]
name = "switchboard-agent"
version = "0.1.0"
description = "Switchboard AI Gateway — Remote Coding Agent"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
switchboard-agent = "switchboard_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
